主线：合并 cdpyx 的 debug 分支到主分支 功能：保险功能，玩家在死亡时会丢失所有物品。玩家可以使用保险系统对物品进行投保。说明如下玩家可以对每件物品进行最高5次（正式版10次）的投保。保险分为1级与2级。1级保险会使玩家物品在死亡时掉落。2级保险会使玩家物品在死亡时保留。1级保险收费保费的20%，2级保险收费保费的100%。测试阶段，保费价格均为0。未投保的物品在死亡时会被记录，允许玩家以10倍保费的价格取回。当前价格为10*0=0。每次死亡都会覆盖上一次的记录。购买保险的指令为 ins buy，取回未被保险的物品指令为ins backup，查看背包内保险物品的信息及取消投保的指令为ins gui，点击对应物品来取消投保； 优化与修复：修复了一些冗余代码和沙伯亦写法